# yaros-iniparser

./: CMakeLists.txt  iniparser.pri  iniparser.pro
